feat: 更换仓库，0.2.4版本

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/zerofree00/filemanager-vue2-dist-zip"
   },
   "keywords": [
+    "dist-zip",
     "filemanager-vue2-dist-zip",
     "dist-zip"
   ],
