--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,9 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
-with:
-  node-version: 10
-  registry-url: https://registry.npmjs.org/
-  - run: npm publish
-  env:
-  NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+  with:
+    node-version: 10
+    registry-url: https://registry.npmjs.org/
+      - run: npm cli
+      - run: npm run build
+      - run: npm publish
+    env:
+      NODE_AUTH_TOKEN: ${{secrets.npm_token}}
